kubernetes/apps/media/owncast/app/tcproute.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/tcproute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: owncast-ingest
  annotations:
    external-dns.alpha.kubernetes.io/hostname: stream-ingest.${SECRET_DOMAIN}
    external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: rtmp
  rules:
    - backendRefs:
        - name: owncast
          port: 1935
